Fixed spacing on dropdown

--- a/src/components/nav-bar/nav-bar.styles.scss
+++ b/src/components/nav-bar/nav-bar.styles.scss
@@ -64,6 +64,10 @@
 .Nav.active {
     height: 4vw;
     background-color: rgb(25, 32, 43, .9);
+
+    .List.active {
+        margin-top: 54.1rem;
+    }
 }
 
 .List {
